@@ -1,4 +1,5 @@
 2.2.7 (ws)
+      - close all open top level windows on app exit
       - fix kb note entry for staff != 0
       - tuplets: implement undo/redo
       - add beam functions to pad
